:lipstick: Fix overflow

--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -202,3 +202,7 @@
   }
 }
 
+.navContent {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
